Fixed img not showing up.

--- a/styles.css
+++ b/styles.css
@@ -146,7 +146,7 @@ div:nth-child(5) p a {
     }
 
     .img {
-        height: 1.0625em;
+        height: 17rem;
     }
 
     h1 {
